<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="30dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_icon_foreground"
            android:layout_marginTop="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:id="@+id/mobile_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="25dp"
                android:text="@string/Employee_ID"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/employee_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/group__3_"
                android:elevation="4dp"
                android:hint="@string/Enter_Employee_ID"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="25dp"
                android:text="@string/Password"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_eye_open"
                android:elevation="4dp"
                android:hint="@string/enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/email_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="#0000FF"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:cornerRadius="10dp"
                app:iconPadding="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/noaccText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="70dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>