<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="27dp"
        android:src="@drawable/dot_icon_155477"/>
    <TextView
        android:id="@+id/nametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_1"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="30dp"
        android:textSize="25sp"/>
    <RadioGroup
        android:id="@+id/radio_grp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:checkedButton="@id/radio_mobile_login"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_mobile_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:buttonTint="#0000ff"
            android:layoutDirection="rtl"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radio_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:buttonTint="#0000ff"
            android:layoutDirection="rtl"
            android:text="@string/no"
            android:textSize="25sp"/>

    </RadioGroup>
</LinearLayout>