<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Choosing">

 <com.google.android.material.card.MaterialCardView
     android:id="@+id/materialCardView2"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:backgroundTint="#4799FA"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

  <ImageView
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:backgroundTint="#0000ff"
      android:src="@drawable/group__2_" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/homepage"
      android:textSize="25sp"
      android:layout_gravity="center"
      android:textColor="@color/white" />
 </com.google.android.material.card.MaterialCardView>

 <androidx.cardview.widget.CardView
     android:id="@+id/tasksCardView"
     android:layout_width="250dp"
     android:layout_height="100dp"
     android:orientation="vertical"
     android:layout_marginStart="55dp"
     android:layout_marginBottom="400dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tasks"
      android:layout_gravity="center" />
 </androidx.cardview.widget.CardView>

 <androidx.cardview.widget.CardView
     android:id="@+id/locationTrackingCardView"
     android:layout_width="250dp"
     android:layout_height="100dp"
     android:orientation="vertical"
     android:layout_marginStart="55dp"
     android:layout_marginBottom="100dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/location_tracking"
      android:layout_gravity="center" />
 </androidx.cardview.widget.CardView>

 <androidx.cardview.widget.CardView
     android:id="@+id/RouteDetailsCardView"
     android:layout_width="250dp"
     android:layout_height="100dp"
     android:orientation="vertical"
     android:layout_marginStart="55dp"
     android:layout_marginBottom="-200dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Route_details"
      android:layout_gravity="center" />
 </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
